# Quant_Lab

./: .env.example  .gitignore  GUIA.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260713_0001_create_datasets_table.py  20260713_0002_create_broker_settings_table.py  20260714_0003_create_optimization_tables.py  20260715_0004_create_validations_table.py  20260715_0005_create_ml_models_table.py  20260715_0006_create_auth_and_trading_tables.py  20260716_0007_create_auto_traders_table.py  20260718_0008_add_fixed_params_to_studies.py  20260720_0009_create_trade_history_table.py  20260721_0010_add_ml_model_to_auto_traders.py  20260721_0011_add_broker_trade_id_to_history.py  20260722_0012_add_exit_price_to_history.py  20260722_0013_add_invert_to_auto_traders.py
backend/scripts/: seed_demo.py
backend/src/quantlab/: __init__.py  config.py  container.py
backend/src/quantlab/application/: __init__.py  event_bus.py  ports.py
backend/src/quantlab/application/services/: auth.py  autotrader.py  backtesting.py  data_ingestion.py  ml.py  optimization.py  trading.py  validation.py
backend/src/quantlab/domain/: __init__.py  auth.py  autotrader.py  backtest.py  broker.py  datasets.py  events.py  market.py  ml.py  objective.py  optimization.py  trading.py  validation.py
backend/src/quantlab/infrastructure/: __init__.py  security.py
backend/src/quantlab/infrastructure/backtesting/: __init__.py  vectorbt_engine.py
backend/src/quantlab/infrastructure/brokers/: __init__.py
backend/src/quantlab/infrastructure/brokers/oanda/: __init__.py  client.py  execution.py  market_data.py  verification.py
backend/src/quantlab/infrastructure/cache/: __init__.py  redis.py
backend/src/quantlab/infrastructure/data/: __init__.py  parquet_store.py
backend/src/quantlab/infrastructure/db/: __init__.py  base.py  session.py
backend/src/quantlab/infrastructure/db/models/: __init__.py  auth.py  autotrader.py  broker_settings.py  dataset.py  ml.py  optimization.py  trade_history.py  validation.py
backend/src/quantlab/infrastructure/db/repositories/: __init__.py  auth.py  autotrader.py  broker_settings.py  dataset.py  ml.py  validation.py  (+2 more)
backend/src/quantlab/infrastructure/logging/: redis_handler.py
backend/src/quantlab/infrastructure/ml/: __init__.py  inference.py  trainers.py
backend/src/quantlab/infrastructure/optimizers/: __init__.py  optuna_optimizer.py  random_search.py
backend/src/quantlab/infrastructure/rl/: __init__.py  sb3_trainer.py
backend/src/quantlab/interfaces/: __init__.py
backend/src/quantlab/interfaces/api/: __init__.py  app.py  deps.py
backend/src/quantlab/interfaces/autotrader/: __init__.py  runner.py
backend/src/quantlab/interfaces/worker/: __init__.py  settings.py
backend/src/quantlab/ml/: __init__.py  features.py  labels.py
backend/src/quantlab/rl/: __init__.py  env.py
backend/src/quantlab/strategies/: __init__.py  base.py  indicators.py  registry.py
backend/src/quantlab/strategies/plugins/: __init__.py  atr_breakout.py  bollinger.py  breakout.py  custom.py  donchian.py  ema_cross.py  fair_value_gap.py  ict.py  liquidity_sweep.py  macd.py  mean_reversion.py  opening_range.py  order_blocks.py  rsi.py  smc.py  vwap.py
backend/tests/: conftest.py  factories.py
backend/tests/integration/: test_health_live.py
backend/tests/unit/: test_auth.py  test_autotrader_repo_route_runner.py  test_autotrader_service.py  test_backtest_service.py  test_broker_settings_repository.py  test_config.py  test_container.py  test_data_ingestion.py  test_dataset_repository.py  test_datasets_route.py  test_db_base.py  test_deps.py  test_event_bus.py  test_events.py  test_health.py  test_indicators.py  test_market.py  test_ml_features_labels.py  test_ml_repository_route.py  test_ml_service.py  test_ml_trainers.py  test_oanda.py  test_oanda_verification.py  test_objective.py  test_optimization_repository.py  test_optimization_service.py  test_optimizations_route.py  test_optimizers.py  test_parquet_store.py  test_registry.py  test_results_and_logs.py  test_rl_env.py  test_security.py  test_settings_route.py  test_strategies_all.py  test_strategies_backtests_routes.py  test_strategy_base.py  test_trading.py  test_validation_repository.py  test_validation_service.py  (+3 more)
(+39 files in other folders)
